Port the library, the reader and PARSE far enough to run real REBOL
Work in progress towards the port of Rebol 3's function set. The suite
runs 6985 assertions with 604 failing; the remaining work is grouped by
subsystem in TODO.md.

Committed dirty on purpose so the history is not one enormous change.
To be squashed once the suite is green.